# k_and_r

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
scripts/: build.sh  clean.sh  config.sh  dev.sh  run.sh
src/: CMakeLists.txt
src/chapter_1/: CMakeLists.txt  ex_1_10.c  ex_1_11.c  ex_1_12.c  ex_1_13.c  ex_1_14.c  ex_1_15.c  ex_1_16.c  ex_1_17.c  ex_1_18.c  ex_1_19.c  ex_1_2.c  ex_1_20.c  ex_1_21.c  ex_1_22.c  ex_1_23.c  ex_1_24.c  ex_1_3.c  ex_1_4.c  ex_1_5.c  ex_1_6.c  ex_1_8.c  ex_1_9.c
src/chapter_2/: CMakeLists.txt  ex_2_1.c  ex_2_10.c  ex_2_2.c  ex_2_3.c  ex_2_4.c  ex_2_5.c  ex_2_6.c  ex_2_7.c  ex_2_8.c  ex_2_9.c
src/chapter_3/: CMakeLists.txt  ex_3_1.c  ex_3_2.c  ex_3_3.c  ex_3_4.c  ex_3_5.c  ex_3_6.c
src/chapter_4/: CMakeLists.txt  ex_4_1.c  ex_4_10.c  ex_4_11.c  ex_4_12.c  ex_4_13.c  ex_4_14.c  ex_4_2.c  ex_4_3.c  ex_4_4.c  ex_4_5.c  ex_4_6.c  ex_4_7.c  ex_4_8.c  ex_4_9.c
src/chapter_5/: CMakeLists.txt  ex_5_1.c  ex_5_10.c  ex_5_11.c  ex_5_12.c  ex_5_13.c  ex_5_14.c  ex_5_15.c  ex_5_16.c  ex_5_17.c  ex_5_18.c  ex_5_2.c  ex_5_3.c  ex_5_4.c  ex_5_5.c  ex_5_7.c  ex_5_8.c  ex_5_9.c
src/chapter_6/: CMakeLists.txt  ex_6_5.c
src/chapter_6/ex_6_1/: CMakeLists.txt  ex_6_1.c
src/chapter_6/ex_6_2/: CMakeLists.txt  ex_6_2.c  trie.c  trie.h
src/chapter_6/ex_6_3/: CMakeLists.txt  DocumentTree.c  DocumentTree.h  LineVector.c  LineVector.h  ex_6_3.c
src/chapter_6/ex_6_4/: CMakeLists.txt  WordTree.c  WordTree.h  ex_6_4.c
src/chapter_6/ex_6_6/: CMakeLists.txt  ex_6_6.c  scanner.h
src/chapter_7/: CMakeLists.txt  ex_7_1.c  ex_7_2.c  ex_7_3.c  ex_7_5.c  ex_7_6.c  ex_7_7.c  ex_7_8.c  ex_7_9.c
